# nonebot-plugin-jmdownloader

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme_template.md
.github/workflows/: pypi-publish.yml  pytest.yml  rename.yml
nonebot_plugin_jmdownloader/: __init__.py  config.py  data_source.py  utils.py
nonebot_plugin_template/: __init__.py  config.py
tests/: plugin_test.py
